[gd_scene load_steps=20 format=3 uid="uid://hrdsqvtibmy4"]

[ext_resource type="Script" path="res://UI/level_selection.gd" id="1_o8iav"]
[ext_resource type="Texture2D" uid="uid://bhtywrmi4log8" path="res://Assets/LevelSelect/info_box.png" id="5_2tggb"]
[ext_resource type="Texture2D" uid="uid://dffsn3p1727qm" path="res://Assets/LevelSelect/back_button.png" id="5_jw8s2"]
[ext_resource type="Script" path="res://UI/level_description.gd" id="6_2wuik"]
[ext_resource type="Texture2D" uid="uid://bfivay8utf4mt" path="res://Assets/LevelSelect/forward_button.png" id="6_6eveq"]
[ext_resource type="Script" path="res://UI/info_box.gd" id="6_abimb"]
[ext_resource type="PackedScene" uid="uid://jpt50igaasi2" path="res://UI/flame_portal.tscn" id="6_emj5n"]
[ext_resource type="Texture2D" uid="uid://bq8t4xkbm3k4e" path="res://Assets/LevelSelect/PortalImages/grave_background_circular.png" id="6_iuh3n"]
[ext_resource type="Texture2D" uid="uid://b0h7j6rosxsfk" path="res://Assets/LevelSelect/Previews/fantasy_preview1.png" id="7_kahdp"]
[ext_resource type="Texture2D" uid="uid://mj4aun1skb60" path="res://Assets/LevelSelect/exit_button.png" id="7_njutm"]
[ext_resource type="Script" path="res://UI/continue_label.gd" id="7_xyunw"]
[ext_resource type="Texture2D" uid="uid://df33wwjpavxsq" path="res://Assets/LevelSelect/main_menu_background.png" id="8_l5wb0"]
[ext_resource type="Texture2D" uid="uid://jt3neaosaymy" path="res://Assets/BattleUI/blue_flame_player.png" id="13_6tgyh"]
[ext_resource type="Texture2D" uid="uid://dv7ro4tfdvel5" path="res://Assets/BattleUI/blue_flame_charater_2.png" id="14_iquyu"]

[sub_resource type="Animation" id="Animation_5qxul"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(262, 249)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(412, 249)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_s4k7e"]
resource_name = "character_wakeup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.566667, 0.666667, 0.766667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-1.5708, -1.68948, -1.45386, -1.21475, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.533333, 1.03333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(412, 252), Vector2(412, 249), Vector2(412, 252)]
}

[sub_resource type="Animation" id="Animation_ghhxl"]
resource_name = "idle_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(262, 249), Vector2(262, 252), Vector2(262, 249)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.533333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(412, 252), Vector2(412, 249), Vector2(412, 252)]
}

[sub_resource type="Animation" id="Animation_psfdv"]
resource_name = "look_left_to_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5, 0.766667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fo801"]
_data = {
"RESET": SubResource("Animation_5qxul"),
"character_wakeup": SubResource("Animation_s4k7e"),
"idle_animation": SubResource("Animation_ghhxl"),
"look_left_to_right": SubResource("Animation_psfdv")
}

[node name="LevelSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o8iav")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 676.0
offset_bottom = 556.0
texture = ExtResource("8_l5wb0")
expand_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(262, 249)
rotation = -1.5708
scale = Vector2(3, 3)
texture = ExtResource("13_6tgyh")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(412, 249)
scale = Vector2(3, 3)
texture = ExtResource("14_iquyu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 69.0
offset_right = 957.0
offset_bottom = 760.0
scale = Vector2(0.7, 0.7)

[node name="LevelDisplayContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = -550
theme_override_constants/margin_right = -550
theme_override_constants/margin_bottom = 60

[node name="Portal" parent="VBoxContainer/LevelDisplayContainer" instance=ExtResource("6_emj5n")]
position = Vector2(480, 251.429)
scale = Vector2(2.5, 2.5)

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/LevelDisplayContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("6_iuh3n")

[node name="Portal2" parent="VBoxContainer/LevelDisplayContainer" instance=ExtResource("6_emj5n")]
position = Vector2(-90, 250)
scale = Vector2(1.7, 1.7)

[node name="Portal3" parent="VBoxContainer/LevelDisplayContainer" instance=ExtResource("6_emj5n")]
position = Vector2(1050, 250)
scale = Vector2(1.7, 1.7)

[node name="ButtonContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_constants/separation = 246
alignment = 1

[node name="Back" type="Button" parent="VBoxContainer/ButtonContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("5_jw8s2")
flat = true

[node name="SelectionLabel" type="Label" parent="VBoxContainer/ButtonContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "- no world selected -"
horizontal_alignment = 1

[node name="Forward" type="Button" parent="VBoxContainer/ButtonContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("6_6eveq")
flat = true

[node name="InfoBox" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("6_abimb")

[node name="TextureRect" type="TextureRect" parent="InfoBox"]
offset_left = 93.0
offset_top = 43.0
offset_right = 585.0
offset_bottom = 519.0
texture = ExtResource("5_2tggb")

[node name="CenterContainer" type="CenterContainer" parent="InfoBox/TextureRect"]
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 493.0
offset_bottom = 476.0

[node name="VBoxContainer" type="VBoxContainer" parent="InfoBox/TextureRect/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LevelPreviewImage" type="TextureRect" parent="InfoBox/TextureRect/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 150)
layout_mode = 2
texture = ExtResource("7_kahdp")
expand_mode = 2

[node name="LevelTitle" type="Label" parent="InfoBox/TextureRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 19
text = "title placeholder"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="InfoBox/TextureRect/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="LevelDescription" type="Label" parent="InfoBox/TextureRect/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "level description placeholder"
horizontal_alignment = 1
autowrap_mode = 2
script = ExtResource("6_2wuik")

[node name="Label" type="Label" parent="InfoBox/TextureRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.305015, 0.629507, 0.871297, 1)
theme_override_font_sizes/font_size = 15
text = "hit enter to jump in"
horizontal_alignment = 1
uppercase = true
script = ExtResource("7_xyunw")

[node name="TextureButton" type="TextureButton" parent="InfoBox"]
offset_left = 547.0
offset_top = 52.0
offset_right = 947.0
offset_bottom = 136.0
scale = Vector2(0.346148, 0.354359)
action_mode = 0
texture_normal = ExtResource("7_njutm")
texture_pressed = ExtResource("7_njutm")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = -144.0
offset_top = 503.0
offset_right = 813.0
offset_bottom = 526.0
theme_override_font_sizes/font_size = 9
text = "hit enter to continue"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fo801")
}

[connection signal="pressed" from="VBoxContainer/ButtonContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/HBoxContainer/Forward" to="." method="_on_forward_pressed"]
[connection signal="pressed" from="InfoBox/TextureButton" to="." method="_on_texture_button_pressed"]
